# dacapopatch

./: .gitignore  CMakeLists.txt  DCPatch.ini  README.md  THIRD_PARTY_NOTICES.md  build.bat
.github/workflows/: release.yml
LICENSES/: GPL-3.0-link.txt  LGPL-3.0-link.txt  Locale-Emulator-LICENSE-NOTES.txt
src/: dcpatch.cpp  launcher.cpp
